--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <body>
 <div class="header">
-<center><a href="/ukrainedigitaldesign"><img src="https://jackbotein.github.io/ukrainedigitaldesign/UkraineDigitalDesignLogo.png" class="logo"></a>
+<center><a href="/"><img src="https://jackbotein.github.io/ukrainedigitaldesign/UkraineDigitalDesignLogo.png" class="logo"></a>
 </center>
 </div>
 <div class="beginninglinebreak"></div>
