--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@ What are you waiting for? Find an expert Ukrainian Digital Designer to help with
 </div></center>
 <center>
 
-<a href="/ukrainedigitaldesign/categories/webdesign" target="blank"><button style="margin-top: 15px;"><center><div class="webdesignimg"></div></center>Web Design</button></a>
+<a href="/categories/webdesign" target="blank"><button style="margin-top: 15px;"><center><div class="webdesignimg"></div></center>Web Design</button></a>
 
-<a href="/ukrainedigitaldesign/categories/graphics" target="blank"><button><center><div class="graphicimg"></div></center>Graphics</button></a>
+<a href="/categories/graphics" target="blank"><button><center><div class="graphicimg"></div></center>Graphics</button></a>
 
-<a href="/ukrainedigitaldesign/categories/codefixes" target="blank"><button><center><div class="codeimg"></div></center>Code Fixes</button></a>
+<a href="/categories/codefixes" target="blank"><button><center><div class="codeimg"></div></center>Code Fixes</button></a>
 
-<a href="/ukrainedigitaldesign/categories/uxuiwork" target="blank"><button><center><div class="uxuiimg"></div></center>UX/UI Work</button></a>
+<a href="/categories/uxuiwork" target="blank"><button><center><div class="uxuiimg"></div></center>UX/UI Work</button></a>
 
-<a href="/ukrainedigitaldesign/categories/printdesigns" target="blank"><button><center><div class="printdesignimg"></div></center>Print Designs</button></a>
+<a href="/categories/printdesigns" target="blank"><button><center><div class="printdesignimg"></div></center>Print Designs</button></a>
 
 <div class="footerspacer"></div>
 
