--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Ukraine Digital Design</title>
-  <link rel="shortcut icon" href="https://raw.githubusercontent.com/Jackbotein/ukrainedigitaldesign/main/images/favicon.ico" />
+  <link rel="shortcut icon" href="/favicon.ico" />
 
 </head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
