--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div class="missionstatementtext">
 Russia's invasion of Ukraine has taken the lives of thousands of innocent civilians, leaving over <span class="underline">3.7 million people as refugees</span> and over <span class="underline">6.5 million people displaced</span> within Ukraine.
 </div>
-<center><img src="https://jackbotein.github.io/ukrainedigitaldesign/Depositphotos_551860322_L%20(1).jpg" class="appealimage"></center>
+<center><img src="/Depositphotos_551860322_L%20(1).jpg" class="appealimage"></center>
 <div class="missionstatementtext">
 Our mission at Ukraine Digital Design is to provide temporary tech gigs to Ukrainians in-need. These jobs provide an economic lifeline in a time of crisis for millions of Ukrainians.
 </div>
@@ -169,7 +169,7 @@ width: 8.5vw;
 height: 6.5vw;
 background-size:cover;
 background-repeats: no-repeats;
-background-image: url("https://jackbotein.github.io/ukrainedigitaldesign/images/webdesign.jpeg");
+background-image: url("/images/webdesign.jpeg");
 }
 
  .graphicimg {
@@ -179,7 +179,7 @@ width: 8.5vw;
 height: 6.5vw;
 background-size:cover;
 background-repeats: no-repeats;
-background-image: url("https://jackbotein.github.io/ukrainedigitaldesign/images/graphicdesign.jpeg");
+background-image: url("/images/graphicdesign.jpeg");
 }
 
  .codeimg {
@@ -189,7 +189,7 @@ width: 8.5vw;
 height: 6.5vw;
 background-size:cover;
 background-repeats: no-repeats;
-background-image: url("https://jackbotein.github.io/ukrainedigitaldesign/images/codefixes.jpg");
+background-image: url("/images/codefixes.jpg");
 }
 
  .uxuiimg {
@@ -199,7 +199,7 @@ width: 8.5vw;
 height: 6.5vw;
 background-size:cover;
 background-repeats: no-repeats;
-background-image: url("https://jackbotein.github.io/ukrainedigitaldesign/images/uxui.jpg");
+background-image: url("/images/uxui.jpg");
 }
 
  .printdesignimg {
@@ -209,7 +209,7 @@ width: 8.5vw;
 height: 6.5vw;
 background-size:cover;
 background-repeats: no-repeats;
-background-image: url("https://jackbotein.github.io/ukrainedigitaldesign/images/printgraphics.jpg");
+background-image: url("/images/printgraphics.jpg");
 }
 
   .underline {
