--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@ What are you waiting for? Find an expert Ukrainian Digital Designer to help with
 <div class="missionlinebreak"></div>
 <div class="footer">
 2022 Ukraine Digital Design LLC.
+<br>
+<div class="contactus">If you have any questions or ideas you want to share with the Ukraine Digital Design Team, feel free to email: <a href="mailto:info@ukrainedigital.org">info@ukrainedigital.org</a></div>
 </div>
 </center>
 <div class="missionlinebreak"></div>
@@ -140,14 +142,23 @@ button:hover {
   
   .footer {
   width: 100%;
-  padding: 10px;
+  padding: 15px;
   background-color: white;
   color: #005BBB;
   text-align: center;
   position: fixed;
-   left: 0;
-   bottom: 0;
+  left: 0;
+  bottom: 0;
+  font-size: 15px;
   }
+  
+    .contactus {
+   color: #005BBB;
+   padding-top:8px;
+   padding-bottom:4px;
+   font-size: 12px;
+  }
+  
   
   a {
     text-decoration: none;
