--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div class="missionstatementtext">
 Russia's invasion of Ukraine has taken the lives of thousands of innocent civilians, leaving over <span class="underline">3.7 million people as refugees</span> and over <span class="underline">6.5 million people displaced</span> within Ukraine.
 </div>
-<center><img src="/Depositphotos_551860322_L%20(1).jpg" class="appealimage"></center>
+<center><img src="/images/pexels-%D0%B0%D0%BB%D0%B5%D1%81%D1%8C-%D1%83%D1%81%D1%86%D1%96%D0%BD%D0%B0%D1%9E-11477792.jpg" class="appealimage"></center>
 <div class="missionstatementtext">
 Our mission at Ukraine Digital Design is to provide temporary tech gigs to Ukrainians in-need. These jobs provide an economic lifeline in a time of crisis for millions of Ukrainians.
 </div>
