--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ What are you waiting for? Find an expert Ukrainian Digital Designer to help with
 <div class="footer">
 2022 Ukraine Digital Design LLC.
 <br>
-<div class="contactus">If you have any questions or ideas you want to share with the Ukraine Digital Design Team, feel free to email: <a href="mailto:info@ukrainedigital.org">info@ukrainedigital.org</a></div>
+<center><div class="contactus">Ukraine Digital Design is not a profit-seeking entity. If you have any questions or ideas you want to share with the Ukraine Digital Design Team, feel free to email: <a href="mailto:info@ukrainedigital.org">info@ukrainedigital.org</a></div></center>
 </div>
 </center>
 <div class="missionlinebreak"></div>
@@ -157,6 +157,7 @@ button:hover {
    padding-top:8px;
    padding-bottom:4px;
    font-size: 12px;
+   width: 80%;
   }
   
   
