--- a/index.html
+++ b/index.html
@@ -2,60 +2,49 @@
 <html>
 <head>
 <title>Ukraine Digital Design</title>
-  <link rel="shortcut icon" href="/images/favicon.ico" />
-
-</head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<body>
-<div class="header">
-<center><a href="/"><img src="/images/UkraineDigitalDesignLogo-1.png" class="logo"></a>
-</center>
-</div>
-<div class="beginninglinebreak"></div>
-<div class="missionstatementtext">
-Russia's invasion of Ukraine has taken the lives of thousands of innocent civilians, leaving over <span class="underline">3.7 million people as refugees</span> and over <span class="underline">10 million people displaced</span> within Ukraine.
-</div>
-<center><img src="/images/pexels-%D0%B0%D0%BB%D0%B5%D1%81%D1%8C-%D1%83%D1%81%D1%86%D1%96%D0%BD%D0%B0%D1%9E-11477792.jpg" class="appealimage"></center>
-<div class="missionstatementtext">
-Our mission at Ukraine Digital Design is to provide temporary tech gigs to Ukrainians in-need. These jobs provide an economic lifeline in a time of crisis for millions of Ukrainians.
-</div>
-<div class="missionlinebreak"></div>
-<div class="missionstatementtext">
-A key thing to know: Ukrainian people are geniuses at tech. By hiring a designer on our platform, you'll get expert help on your project & provide much needed financial help to struggling Ukrainians.
-</div>
-<div class="missionlinebreak"></div>
-<center><div class="missionstatementtext" style="font-size: 22px;">
-What are you waiting for? Find an expert Ukrainian Digital Designer to help with:
-</div></center>
-<center>
-
-<a href="/categories/webdesign" target="blank"><button style="margin-top: 15px;"><center><div class="webdesignimg"></div></center>Web Design</button></a>
-
-<a href="/categories/graphics" target="blank"><button><center><div class="graphicimg"></div></center>Graphics</button></a>
-
-<a href="/categories/codefixes" target="blank"><button><center><div class="codeimg"></div></center>Code Fixes</button></a>
-
-<a href="/categories/uxuiwork" target="blank"><button><center><div class="uxuiimg"></div></center>UX/UI Work</button></a>
-
-<a href="/categories/printdesigns" target="blank"><button><center><div class="printdesignimg"></div></center>Print Designs</button></a>
-
-<div class="footerspacer"></div>
-
-<div class="missionlinebreak"></div>
-<div class="footer">
-2022 Ukraine Digital Design LLC.
-<br>
-<center><div class="contactus">Ukraine Digital Design is not a profit-seeking entity. If you have any questions or ideas you want to share with the Ukraine Digital Design Team, feel free to email: <a href="mailto:info@ukrainedigital.org">info@ukrainedigital.org</a></div></center>
-</div>
-</center>
-<div class="missionlinebreak"></div>
-<style>
-@import url('https://fonts.googleapis.com/css2?family=Sora&display=swap');
+<link rel="shortcut icon" href="/images/favicon.ico" />
+  <meta charset="UTF-8">
+  <meta name="description" content="A platform dedicated to connecting Ukrainian Digital Designers impacted by Russia's invasion with high-quality U.S. work opportunities.">
+  <meta name="keywords" content="Ukraine, ukraine, helping ukraine, Russian Invasion, Jack Botein, Botein, Kyiv Web Design, web design, graphic design, logo design, graphics, HTML, CSS, JavaScript">
+  <meta name="author" content="Jack Botein">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <style> 
+  @import url('https://fonts.googleapis.com/css2?family=Sora&display=swap');
 
 body {
   font-family: 'Sora', sans-serif;
   background-color: #005BBB;
   margin:0px;
+}
+
+  .underline {
+  border-bottom: 3px solid #FFFFFF;
+  }
+  
+    ::selection {
+  color: #005BBB;
+  background: #FFD500;
+ }
+ 
+ a {
+    text-decoration: none;
+  }
+  
+ #everythingonwebsite {
+  position: relative;
+  min-height: 100vh;
+}
+
+#cmaincontentminusfooter {
+  padding-bottom: 2.5rem;    /* Footer height */
+}
+
+.logo {
+  float: center;
+  width: 80vw;
+  max-width: 450px;
+  margin-left: -40px;
 }
 
 .header {
@@ -67,22 +56,45 @@ body {
   z-index: 99;
 }
 
-.logo {
-  float: center;
-  width: 80vw;
-  max-width: 450px;
-  margin-left: -40px;
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  color: #005BBB;
+  padding: 10px;
+  background-color: white;
 }
 
-.beginninglinebreak {
-  height: 130px;
+.contactus {
+  color: #005BBB;
+  padding-top:8px;
+  padding-bottom:4px;
+  font-size: 12px;
+  width: 80%;
 }
 
-.missionstatementtext {
+.header {
+  width: 100%;
+  padding: 20px;
+  background-color: white;
+  position: fixed;
+  top: 0vh;
+  z-index: 99;
+}
+
+.missionstatement {
   font-size: 20px;
   color: white;
   margin-left: 5vw;
   margin-right: 5vw;
+}
+
+.headerlinebreak {
+  height: 130px;
+}
+
+.footerlinebreak {
+  height: 150px;
 }
 
 .missionlinebreak {
@@ -123,64 +135,14 @@ transition-duration: 1s;
 button:hover {
   background-color: #FFD500;
 }
-  
- .servicesbuttons {
-  color: #005BBB;
-  background-color: white;
-  border-style: solid;
-  border-width: 4px;
-  border-color: #FFD500;
-  padding: min(max(5px, .5vw), 10px);
-  transition-duration: 1s;
-  margin: 1.5vw;
-  font-size: min(max(10px, 1.6vw), 15px);
- }
- 
-  .servicesbuttons:hover {
-    background-color: #FFD500;
-  }
-  
-  .footer {
-  width: 100%;
-  padding: 15px;
-  background-color: white;
-  color: #005BBB;
-  text-align: center;
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  font-size: 15px;
-  }
-  
-    .contactus {
-   color: #005BBB;
-   padding-top:8px;
-   padding-bottom:4px;
-   font-size: 12px;
-   width: 80%;
-  }
-  
-  
-  a {
-    text-decoration: none;
-  }
-  
-  .footerspacer {
-    height: 5vh;
-  }
-  
-  ::selection {
-  color: #005BBB;
-  background: #FFD500;
- }
- 
+
  .webdesignimg {
 min-width: 70px;
 min-height: 51.5px;
 width: 8.5vw;
 height: 6.5vw;
 background-size:cover;
-background-repeats: no-repeats;
+background-repeat: no-repeats;
 background-image: url("/images/webdesign.jpeg");
 }
 
@@ -190,7 +152,7 @@ min-height: 51.5px;
 width: 8.5vw;
 height: 6.5vw;
 background-size:cover;
-background-repeats: no-repeats;
+background-repeat: no-repeats;
 background-image: url("/images/graphicdesign.jpeg");
 }
 
@@ -200,7 +162,7 @@ min-height: 51.5px;
 width: 8.5vw;
 height: 6.5vw;
 background-size:cover;
-background-repeats: no-repeats;
+background-repeat: no-repeats;
 background-image: url("/images/codefixes.jpg");
 }
 
@@ -210,7 +172,7 @@ min-height: 51.5px;
 width: 8.5vw;
 height: 6.5vw;
 background-size:cover;
-background-repeats: no-repeats;
+background-repeat: no-repeats;
 background-image: url("/images/uxui.jpg");
 }
 
@@ -220,14 +182,57 @@ min-height: 51.5px;
 width: 8.5vw;
 height: 6.5vw;
 background-size:cover;
-background-repeats: no-repeats;
+background-repeat: no-repeats;
 background-image: url("/images/printgraphics.jpg");
 }
 
-  .underline {
-  border-bottom: 3px solid #FFFFFF;
-  }
+ </style>
+</head>
+
+<body>
+ <div id="everythingonwebsite">
+   <div id="maincontentminusfooter"><center>
   
-</style>
-</body>
+   <div class="header"><a href="/"><img src="/images/UkraineDigitalDesignLogo-1.png" class="logo"></a></div>
+
+<div class="headerlinebreak"></div>
+
+<div class="missionstatement">
+Russia's invasion of Ukraine has taken the lives of thousands of innocent civilians, leaving over <span class="underline">3.7 million people as refugees</span> and over <span class="underline">10 million people displaced</span> within Ukraine.
+</div>
+
+<img src="/images/pexels-%D0%B0%D0%BB%D0%B5%D1%81%D1%8C-%D1%83%D1%81%D1%86%D1%96%D0%BD%D0%B0%D1%9E-11477792.jpg" class="appealimage">
+
+<div class="missionstatement">
+Our mission at Ukraine Digital Design is to provide temporary tech gigs to Ukrainians in-need. These jobs provide an economic lifeline in a time of crisis for millions of Ukrainians.
+</div>
+
+<div class="missionlinebreak"></div>
+
+<div class="missionstatement">
+A key thing to know: Ukrainian people are geniuses at tech. By hiring a designer on our platform, you'll get expert help on your project & provide much needed financial help to struggling Ukrainians.
+</div>
+
+<div class="missionlinebreak"></div>
+
+<div class="missionstatement" style="font-size: 22px;">
+What are you waiting for? Find an expert Ukrainian Digital Designer to help with:
+</div>
+
+<a href="/categories/webdesign" target="blank"><button style="margin-top: 15px;"><center><div class="webdesignimg"></div></center>Web Design</button></a>
+
+<a href="/categories/graphics" target="blank"><button><center><div class="graphicimg"></div></center>Graphics</button></a>
+
+<a href="/categories/codefixes" target="blank"><button><center><div class="codeimg"></div></center>Code Fixes</button></a>
+
+<a href="/categories/uxuiwork" target="blank"><button><center><div class="uxuiimg"></div></center>UX/UI Work</button></a>
+
+<a href="/categories/printdesigns" target="blank"><button><center><div class="printdesignimg"></div></center>Print Designs</button></a>
+
+<div class="footerlinebreak"></div>
+
+   </center></div>
+   <center><footer id="footer">2022 Ukraine Digital Design LLC.<br><div class="contactus">Ukraine Digital Design is not a profit-seeking entity. If you have any questions or ideas you want to share with the Ukraine Digital Design Team, feel free to email: <a href="mailto:info@ukrainedigital.org">info@ukrainedigital.org</a></div></footer></center>
+ </div>
+ </body>
 </html>
