--- a/designerlistings/designerlisting.html
+++ b/designerlistings/designerlisting.html
@@ -1,4 +1,5 @@
-<style>
+<html>
+  <style>
 body {
   background-color: transparent;
 }
@@ -75,8 +76,8 @@ br {
 .skill {
   color: #005BBB;
   padding-bottom: 2.5px;
-  margin-right: 7px;
-  margin-left: 7px;
+  margin-right: 5px;
+  margin-left: 5px;
   border-bottom: 3px solid transparent;
   font-size: 16px;
   transition-duration: 1.5s;
@@ -155,3 +156,4 @@ button:hover {
 <span><a href="mailto:artmstrong@gmail.com?subject=Graphic Design Work Inquiry | Ukraine Digital Design"><button>Email</button></a></span>
 </center></div>
 </div>
+</html>
