--- a/designerlistings/designerlisting.html
+++ b/designerlistings/designerlisting.html
@@ -1,4 +1,5 @@
 <html>
+<head>
   <style>
 body {
   background-color: transparent;
@@ -124,6 +125,9 @@ button:hover {
 }
 
 </style>
+</head>
+
+<body>
 <div class="wholelisting">
 <div class="headerlisting">
 <div class="designername"><b>Karyna Budaieva</b></div>
@@ -156,4 +160,5 @@ button:hover {
 <span><a href="mailto:artmstrong@gmail.com?subject=Graphic Design Work Inquiry | Ukraine Digital Design"><button>Email</button></a></span>
 </center></div>
 </div>
+</body>
 </html>
