--- a/designerlistings/designerlisting.html
+++ b/designerlistings/designerlisting.html
@@ -8,6 +8,7 @@ body {
 .wholelisting {
   background-color: white;
   width: 500px;
+  height: 297px;
 }
 
 .designername {
@@ -98,22 +99,21 @@ br {
 .nextstepslisting { 
   width: 500px;
   height: auto;
-  margin-top: -7px;
+  margin-top: 7px;
   border-style: solid;
-  border-width: 3px;
+  border-width: 0px;
   border-color: #FFD500;
   padding-top: 10px;
   padding-bottom: 10px;
-  background-color: white;
 }
 
 button {
   color: #005BBB;
   border-color: #FFD500;
   font-size: 16px;
-  padding: 7px;
-  margin-left: 4px;
-  margin-right: 4px;
+  padding: 9px;
+  margin-left: 13px;
+  margin-right: 13px;
   border-radius: 10px;
   transition-duration: 1s;
 }
@@ -152,13 +152,13 @@ button:hover {
 <img src="https://patch.com/img/cdn20/users/24210008/20200608/110804/me1___08110803011.jpg" style="width:200px;">
 </div>
 
-</div>
+</div></div>
 <div class="nextstepslisting">
 <center>
 <span><a href="https://www.behance.net/karynabudaieva" target="blank"><button>Portfolio</button></a></span>
-<span><a href="https://t.me/mltkary" target="blank"><button>Telegram</button></a></span>
 <span><a href="mailto:artmstrong@gmail.com?subject=Graphic Design Work Inquiry | Ukraine Digital Design"><button>Email</button></a></span>
-</center></div>
+<span><a href="https://t.me/mltkary" target="blank"><button>Telegram</button></a></span>
+</center>
 </div>
 </body>
 </html>
