--- a/designerlistings/KarynaBudaieva.html
+++ b/designerlistings/KarynaBudaieva.html
@@ -149,7 +149,7 @@ button:hover {
 </center>
 </div>
 <div class="picture">
-<img src="https://patch.com/img/cdn20/users/24210008/20200608/110804/me1___08110803011.jpg" style="width:200px;">
+<img src="/images/designerprofilepics/KarynaBudaieva.jpeg" style="width:200px;">
 </div>
 
 </div></div>
