--- a/designerlistings/KarynaBudaieva.html
+++ b/designerlistings/KarynaBudaieva.html
@@ -7,7 +7,7 @@ body {
 
 .wholelisting {
   background-color: white;
-  width: 500px;
+  width: 450px;
   height: 297px;
 }
 
@@ -45,7 +45,7 @@ br {
 }
 
 .headerlisting { 
-  width: 500px;
+  width: 450px;
   height: auto;
   border-style: solid;
   border-width: 3px;
@@ -56,7 +56,7 @@ br {
 .mainlisting {
   margin-top: -3px;
   display: inline-block; 
-  width: 500px;
+  width: 450px;
   height: 200px;
   border-style: solid;
   border-width: 3px;
@@ -64,14 +64,14 @@ br {
 }
 
 .skillsandinfo {
-  width: 294px;
+  width: 269px;
   height: 200px;
   float: left;
   border-right: 3px solid;
   border-color: #FFD500;
 }
 .picture {
-  width: 200px;
+  width: 175px;
   float: right;
 }
 
@@ -97,7 +97,7 @@ br {
 }
 
 .nextstepslisting { 
-  width: 500px;
+  width: 450px;
   height: auto;
   margin-top: 7px;
   border-style: solid;
@@ -149,7 +149,7 @@ button:hover {
 </center>
 </div>
 <div class="picture">
-<img src="/images/designerprofilepics/KarynaBudaieva.jpeg" style="width:200px;">
+<img src="https://ukrainedigital.org/images/designerprofilepics/KarynaBudaieva.jpeg" style="width:175px;margin-top:6px">
 </div>
 
 </div></div>
