--- a/designerlistings/KarynaBudaieva.html
+++ b/designerlistings/KarynaBudaieva.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<title>Ukraine Digital Design Graphic Designer Listing | Karyna Budaieva</title>
   <style>
 body {
   background-color: transparent;
