--- a/designerlistings/graphicdesign/KarynaBudaieva.html
+++ b/designerlistings/graphicdesign/KarynaBudaieva.html
@@ -146,7 +146,7 @@ button:hover {
 <br><br>
 <div class="skillclassification"><i><b>Languages</b></i></div>
 <span class="skill">Ukrainian</span>
-<span class="skill">English (translator)</span>
+<span class="skill">English <span style="font-size:12px">(translator)</span></span>
 <span class="skill">Russian</span>
 </center>
 </div>
