--- a/index.html
+++ b/index.html
@@ -63,16 +63,9 @@ body {
   bottom: 0;
   width: 100%;
   color: #005BBB;
-  padding: 15px;
+  padding-top: 20px;
+  padding-bottom: 20px;
   background-color: white;
-}
-
-.contactus {
-  color: #005BBB;
-  padding-top:8px;
-  padding-bottom:4px;
-  font-size: 12px;
-  width: 80%;
 }
 
 .header {
@@ -188,6 +181,27 @@ background-repeat: no-repeats;
 background-image: url("/images/printgraphics.jpg");
 }
 
+.footernavbar {
+  font-size: 10px;
+  padding-top: 22px;
+  padding-bottom: 23px;
+}
+
+.footernavitem {
+  margin-right: 10px;
+  margin-left: 10px;
+  border-style: solid;
+  border-width: 3px;
+  border-color: #FFD500;
+  border-radius: 14px;
+  padding: 6px;
+  transition-duration: 1s;
+}
+
+.footernavitem:hover {
+  background-color: #FFD500;
+}
+
  </style>
 </head>
 
@@ -234,7 +248,13 @@ What are you waiting for? Find an expert Ukrainian Digital Designer to help with
 <div class="footerlinebreak"></div>
 
    </center></div>
-   <center><footer id="footer">2022 Ukraine Digital Design LLC.<br><div class="contactus">Ukraine Digital Design is not a profit-seeking entity. If you have any questions or ideas you want to share with the Ukraine Digital Design Team, feel free to email: <a href="mailto:info@ukrainedigital.org">info@ukrainedigital.org</a></div></footer></center>
+   <center><footer id="footer">2022 Ukraine Digital Design LLC.
+   <div class="footernavbar">
+   <span class="footernavitem">About Us</span>
+   <span class='footernavitem'>Register as a Designer</span>
+   <span class="footernavitem">Contact</span>
+   </div>
+   </footer></center>
  </div>
  </body>
 </html>
