--- a/index.html
+++ b/index.html
@@ -250,9 +250,9 @@ What are you waiting for? Find an expert Ukrainian Digital Designer to help with
    </center></div>
    <center><footer id="footer">2022 Ukraine Digital Design LLC.
    <div class="footernavbar">
-   <span class="footernavitem">About Us</span>
-   <span class='footernavitem'>Register as a Designer</span>
-   <span class="footernavitem">Contact</span>
+   <a href="/about"><span class="footernavitem">About Us</span></a>
+   <a href="/designerregister"><span class='footernavitem'>Register as a Designer</span></a>
+   <a href="/contact"><span class="footernavitem">Contact</span></a>
    </div>
    </footer></center>
  </div>
