--- a/backendforms/contactform.html
+++ b/backendforms/contactform.html
@@ -2,7 +2,7 @@
 <html> 
 <head>
   <title>Ukraine Digital Design | Contact Us Form</title>
-  <link rel="shortcut icon" href="https://jackbotein.github.io/funraise/favicon.ico" />
+  <link rel="shortcut icon" href="/images/favicon.ico" />
 </head>
 <body style="margin:0;">
 
