--- a/backendforms/contactform.html
+++ b/backendforms/contactform.html
@@ -1,7 +1,7 @@
 
 <html> 
 <head>
-  <title>Ukraine Digital Design | Contact Us Form</title>
+  <title>Ukraine Digital Design | Contact Form</title>
   <link rel="shortcut icon" href="/images/favicon.ico" />
 </head>
 <body style="margin:0;">
