--- a/backendforms/contactform.html
+++ b/backendforms/contactform.html
@@ -17,7 +17,7 @@
        <span>Your Message:<br></span>
     <input type="text"  autocomplete="off" name="entry.665296152" id="entry.665296152" style="font-size:12px;width:90%;height:25px;background-color:white;border-width:.25vw;border-color:#FFD500;border-radius:0vw;margin-top:1vh;margin-bottom:1vh;"><br>
  <br>
-  <button type="submit" onclick="window.location = 'https://feastfund.github.io/v.1/contact'; return false;" >Submit</button>
+  <button type="submit" onclick="window.location = 'https://feastfund.github.io/v.1/contact'" >Submit</button>
   </form>
   </center>
   
