--- a/designerregistration.html
+++ b/designerregistration.html
@@ -197,18 +197,18 @@ button:hover {
  <center>
  <form action="https://docs.google.com/forms/u/0/d/1aUVZ8J-SnrE-xJw_7aPKtqyCrxT1OjH6RYW6G2l9Vfs/formResponse?">
   <span>Your Name<br></span>
-    <input type="text"  autocomplete="off" name="entry.1184437112" id="entry.1184437112" style="font-size:17px;width:90vw;height:25px;background-color:white;border-width:.25vw;border-color:#FFD500;;border-radius:0vw;margin-top:1vh;margin-bottom:1vh;"><br>
+    <input type="text"  autocomplete="off" name="entry.1184437112" id="entry.1184437112" style="font-size:17px;width:90vw;max-width:500px;height:25px;background-color:white;border-width:.25vw;border-color:#FFD500;;border-radius:0vw;margin-top:1vh;margin-bottom:1vh;"><br>
     <br>
     <span>What are your top design skills?<br></span>
-    <input type="text"  autocomplete="off" name="entry.1184437112" id="entry.1184437112" style="font-size:12px;width:90%;height:25px;background-color:white;border-width:.25vw;border-color:#FFD500;border-radius:0vw;margin-top:1vh;margin-bottom:1vh;"><br><br>
+    <input type="text"  autocomplete="off" name="entry.1184437112" id="entry.1184437112" style="font-size:12px;width:90%;max-width:500px;height:25px;background-color:white;border-width:.25vw;border-color:#FFD500;border-radius:0vw;margin-top:1vh;margin-bottom:1vh;"><br><br>
     <span>Languages Spoken<br></span>
-    <input type="text"  autocomplete="off" name="entry.74482928" id="entry.74482928" style="font-size:12px;width:90%;height:25px;background-color:white;border-width:.25vw;border-color:#FFD500;border-radius:0vw;margin-top:1vh;margin-bottom:1vh;"><br><br>
+    <input type="text"  autocomplete="off" name="entry.74482928" id="entry.74482928" style="font-size:12px;width:90%;max-width:500px;height:25px;background-color:white;border-width:.25vw;border-color:#FFD500;border-radius:0vw;margin-top:1vh;margin-bottom:1vh;"><br><br>
         <span>Work Samples<br></span>
-    <input type="text"  autocomplete="off" name="entry.16067431" id="entry.16067431" style="font-size:12px;width:90%;height:25px;background-color:white;border-width:.25vw;border-color:#FFD500;border-radius:0vw;margin-top:1vh;margin-bottom:1vh;"><br><br>
+    <input type="text"  autocomplete="off" name="entry.16067431" id="entry.16067431" style="font-size:12px;width:90%;max-width:500px;height:25px;background-color:white;border-width:.25vw;border-color:#FFD500;border-radius:0vw;margin-top:1vh;margin-bottom:1vh;"><br><br>
             <span>Portfolio Link (if applicable)<br></span>
-    <input type="text"  autocomplete="off" name="entry.842507764" id="entry.842507764" style="font-size:12px;width:90%;height:25px;background-color:white;border-width:.25vw;border-color:#FFD500;border-radius:0vw;margin-top:1vh;margin-bottom:1vh;"><br><br>
+    <input type="text"  autocomplete="off" name="entry.842507764" id="entry.842507764" style="font-size:12px;width:90%;max-width:500px;height:25px;background-color:white;border-width:.25vw;border-color:#FFD500;border-radius:0vw;margin-top:1vh;margin-bottom:1vh;"><br><br>
       <span>Your Email:<br></span>
-    <input type="text"  autocomplete="off" name="entry.442308946" id="Email:" style="font-size:17px;width:90%;height:25px;background-color:white;border-width:.25vw;border-color:#FFD500;;border-radius:0vw;margin-top:1vh;margin-bottom:1vh;"><br><br>
+    <input type="text"  autocomplete="off" name="entry.442308946" id="Email:" style="font-size:17px;width:90%;max-width:500px;height:25px;background-color:white;border-width:.25vw;border-color:#FFD500;;border-radius:0vw;margin-top:1vh;margin-bottom:1vh;"><br><br>
              <span>Will you email us a weekly list of your client work sourced from ukrainedigital.org?<br></span>
     <span><input type="checkbox"  name="entry.604373649" id="entry.604373649" style="font-size:12px;height:25px;background-color:white;border-width:.25vw;border-color:#FFD500;border-radius:0vw;margin-top:1vh;margin-bottom:1vh;"></span><span style="position: relative;top:-1vh;left:1vw;">yes</span><br><br>
 <span>Do you agree to release Ukraine Digital Design LLC. from all liability associated with your design work sourced through our platform<br></span>
