--- a/contact.html
+++ b/contact.html
@@ -183,6 +183,27 @@ button:hover {
 }
 
 
+.footernavbar {
+  font-size: 10px;
+  padding-top: 22px;
+  padding-bottom: 23px;
+}
+
+.footernavitem {
+  margin-right: 10px;
+  margin-left: 10px;
+  border-style: solid;
+  border-width: 3px;
+  border-color: #FFD500;
+  border-radius: 14px;
+  padding: 6px;
+  transition-duration: 1s;
+}
+
+.footernavitem:hover {
+  background-color: #FFD500;
+}
+
  </style>
 </head>
 
