--- a/designerregistration.html
+++ b/designerregistration.html
@@ -227,6 +227,7 @@ button:hover {
             <span>Portfolio Link (if applicable)<br></span>
     <input type="text"  autocomplete="off" name="entry.842507764" id="entry.842507764" style="font-size:12px;width:90%;max-width:500px;height:25px;background-color:white;border-width:.25vw;border-color:#FFD500;border-radius:0vw;margin-top:1vh;margin-bottom:1vh;"><br><br>
       <span>Your Email:<br></span>
+   <span>Will you update us weekly via email on your progress getting clients<br></span>
     <input type="text"  autocomplete="off" name="entry.442308946" id="Email:" style="font-size:17px;width:90%;max-width:500px;height:25px;background-color:white;border-width:.25vw;border-color:#FFD500;;border-radius:0vw;margin-top:1vh;margin-bottom:1vh;"><br><br>
              <span><input type="checkbox"  name="entry.604373649" style="font-size:12px;height:25px;background-color:white;border-width:.25vw;border-color:#FFD500;border-radius:0vw;margin-top:1vh;margin-bottom:1vh;"></span><span style="position: relative;top:-1vh;left:1vw;">yes</span><br><br>
 <span>Do you agree to release Ukraine Digital Design LLC. from all liability associated with your design work sourced through our platform<br></span>
