--- a/designerregistration.html
+++ b/designerregistration.html
@@ -197,6 +197,7 @@ button:hover {
   border-radius: 14px;
   padding: 6px;
   transition-duration: 1s;
+  color: #005BBB;
 }
 
 .footernavitem:hover {
