--- a/contact.html
+++ b/contact.html
@@ -198,6 +198,7 @@ button:hover {
   border-radius: 14px;
   padding: 6px;
   transition-duration: 1s;
+  color: #005BBB;
 }
 
 .footernavitem:hover {
