--- a/about.html
+++ b/about.html
@@ -1,1 +1,255 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Ukraine Digital Design | About Us</title>
+<link rel="shortcut icon" href="/images/favicon.ico" />
+  <meta charset="UTF-8">
+  <meta name="description" content="A platform dedicated to connecting Ukrainian Digital Designers impacted by Russia's invasion with high-quality U.S. work opportunities.">
+  <meta name="keywords" content="Ukraine Digital Design, Ukraine digital design, ukraine digital design, ukrainedigital.org, Ukraine, ukraine, helping ukraine, Russian Invasion, Jack Botein, Botein, Kyiv Web Design, web design, graphic design, logo design, graphics, HTML, CSS, JavaScript">
+  <meta name="author" content="Jack Botein">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <style> 
+  @import url('https://fonts.googleapis.com/css2?family=Sora&display=swap');
+
+body {
+  font-family: 'Sora', sans-serif;
+  background-color: #005BBB;
+  margin:0px;
+  max-width: 100%;
+  overflow-x: hidden;
+  color: white;
+}
+
+  .underline {
+  border-bottom: 3px solid #FFFFFF;
+  }
+  
+    ::selection {
+  color: #005BBB;
+  background: #FFD500;
+ }
+ 
+ a {
+    text-decoration: none;
+  }
+  
+ #everythingonwebsite {
+  position: relative;
+  min-height: 100vh;
+}
+
+#cmaincontentminusfooter {
+  padding-bottom: 2.5rem;    /* Footer height */
+}
+
+.logo {
+  float: center;
+  width: 80vw;
+  max-width: 450px;
+  margin-left: -40px;
+}
+
+.header {
+  width: 100%;
+  padding: 20px;
+  background-color: white;
+  position: fixed;
+  top: 0vh;
+  z-index: 99;
+}
+
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  color: #005BBB;
+  padding: 15px;
+  background-color: white;
+}
+
+.specialtyclassification {
+  margin-left: -40px;
+  font-size: min(max(16px, 4vw), 22px);
+  color: #005BBB;
+}
+
+ 
+.listing {
+  width:85vw;
+  max-width: 800px;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-bottom: 30px;
+  transition-duration: 1s;
+}
+
+.listing:hover {
+ width:70vw;
+ max-width: 850px;
+}
+
+.contactus {
+  color: #005BBB;
+  padding-top:8px;
+  padding-bottom:4px;
+  font-size: 12px;
+  width: 80%;
+}
+
+.header {
+  width: 100%;
+  padding: 20px;
+  background-color: white;
+  position: fixed;
+  top: 0vh;
+  z-index: 99;
+}
+
+.missionstatement {
+  font-size: 20px;
+  color: white;
+  margin-left: 5vw;
+  margin-right: 5vw;
+}
+
+.headerlinebreak {
+  height: 50px;
+}
+
+.footerlinebreak {
+  height: 150px;
+}
+
+ input {
+    color: #005BBB;
+  }
+  
+    ::selection {
+  color: #005BBB;
+  background: #FFD500;
+ }
+ 
+a {
+color: white;
+text-decoration: none;
+}
+
+.header {
+  border-radius: 0vw 0vw 0vw 0vw;
+  font-size: 23px;
+  padding-top: 11px;
+  color: black;
+  background-color: white;
+  position: relative;
+  top: 0;
+  width: 100%;
+  text-align: center;
+}
+
+
+.contact {
+border-radius: 0vw 0vw 0vw 0vw;
+padding-top: 2vw;
+padding-bottom: 0vw;
+background-color: silver;
+text-align: center;
+width: 40%;
+position: relative;
+top: 0px;
+left: 30%;
+font-size: 25px;
+}
+
+a {
+  transition-duration: 1s;
+}
+a:hover {
+  opacity:40%;
+}
+
+button {
+  padding:1vw;
+  font-size:125%;
+  background-color:white;
+  color:#005BBB;
+  border-radius:3vw;
+  border-color: #FFD500;
+  transition-duration: 1s;
+}
+
+button:hover {
+  background-color: #FFD500;
+}
+
+
+.footernavbar {
+  font-size: 10px;
+  padding-top: 22px;
+  padding-bottom: 23px;
+}
+
+.footernavitem {
+  margin-right: 10px;
+  margin-left: 10px;
+  border-style: solid;
+  border-width: 3px;
+  border-color: #FFD500;
+  border-radius: 14px;
+  padding: 6px;
+  transition-duration: 1s;
+  color: #005BBB;
+}
+
+.footernavitem:hover {
+  background-color: #FFD500;
+}
+
+.parent {
+  text-align: center;
+}
+.child {
+  display: inline-block;
+  border: 0px solid #FFD500;;
+  padding: 1rem 1rem;
+  vertical-align: middle;
+  max-width: 500px;
+  margin-bottom: 10px;
+  color: white;
+}
+
+.jackpic {
+  width: 300px;
+}
+
+ </style>
+</head>
+
+<body>
+ <div id="everythingonwebsite">
+   <div id="maincontentminusfooter"><center>
+  
+   <div class="header"><a href="/"><img src="http://ukrainedigital.org/images/UkraineDigitalDesignLogo-1.png" class="logo"></a><div class="specialtyclassification">About Us</div></div>
+
+<div class="headerlinebreak"></div>
+
+<div class='parent'>
+  <div class='child'>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+</div>
+  <div class='child'><img src='https://ukrainedigital.org/images/pexels-%D0%B0%D0%BB%D0%B5%D1%81%D1%8C-%D1%83%D1%81%D1%86%D1%96%D0%BD%D0%B0%D1%9E-11477792.jpg' class='jackpic'>
+</div>
+</div>
+  
+<div class="footerlinebreak"></div>
+
+   </center></div>
+   <center><footer id="footer">2022 Ukraine Digital Design LLC.
+   <div class="footernavbar">
+   <a href="/designerregistration" target="blank"><span class='footernavitem'>Register as a Designer</span></a>
+   <a href="/contact" target="blank"><span class="footernavitem">Contact</span></a>
+   </div>
+   </footer></center>
+ </div>
+ </body>
+</html>
 
