--- a/about.html
+++ b/about.html
@@ -234,7 +234,7 @@ button:hover {
 <div class="headerlinebreak"></div>
 
 <div class='parent'>
-  <div class='child'>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+  <div class='child'>Jack Botein, 11th grade student in high school, call to action explaination. History and timing. What his vision is. Other stuff he's interesting in. Jack Botein, 11th grade student in high school, call to action explaination. History and timing. What his vision is. Other stuff he's interesting in. Jack Botein, 11th grade student in high school, call to action explaination. History and timing. What his vision is. Other stuff he's interesting in. 
 </div>
   <div class='child'><img src='https://ukrainedigital.org/images/JackBoteinPicture.jpg' class='jackpic'>
 </div>
