--- a/about.html
+++ b/about.html
@@ -246,6 +246,7 @@ button:hover {
    </center></div>
    <center><footer id="footer">2022 Ukraine Digital Design LLC.
    <div class="footernavbar">
+   <a href="/about" target="blank"><span class='footernavitem'>About</span></a>
    <a href="/designerregistration" target="blank"><span class='footernavitem'>Register as a Designer</span></a>
    <a href="/contact" target="blank"><span class="footernavitem">Contact</span></a>
    </div>
