--- a/about.html
+++ b/about.html
@@ -206,7 +206,6 @@ button:hover {
 }
 
 .parent {
-  text-align: center;
 }
 .child {
   display: inline-block;
@@ -223,6 +222,9 @@ button:hover {
   border-radius: 10px;
 }
 
+.textdescription {
+  text-align: left;
+}
  </style>
 </head>
 
@@ -235,7 +237,15 @@ button:hover {
 <div class="headerlinebreak"></div>
 
 <div class='parent'>
-  <div class='child'>Jack Botein, 11th grade student in high school, call to action explaination. History and timing. What his vision is. Other stuff he's interesting in. Jack Botein, 11th grade student in high school, call to action explaination. History and timing. What his vision is. Other stuff he's interesting in. Jack Botein, 11th grade student in high school, call to action explaination. History and timing. What his vision is. Other stuff he's interesting in. 
+  <div class='child'><div class="textdescriptions">
+Russia’s invasion of Ukraine has forced over 3.6 million Ukrainians to flee their country, and another 10 million people are internally displaced. Without a clear end to the conflict, millions are left in dire straits, with economic instability exacerbated by a lack of employment opportunities in the short term. 
+<br><br>
+This past summer, Jack Botein founded his own website design business, producing graphics and websites for small organizations across the US. This successful business inspired Jack to launch Ukraine Digital Design in March 2022, aiming to connect Ukrainian digital designers living in tough circumstances with the same high-value American clients he targeted in his personal business. 
+<br><br>
+Ukraine Digital Design isn’t a profit seeking entity, rather its aim is to improve the lives of Ukrainian designers impacted by the war by connecting them with high-value design work in America. There are no fees, pricing restrictions, or commissions charged by Ukraine Digital Design—this is fundamentally just a platform to connect Ukrainian designers with high-paying work during a tough time.
+<br><br>
+Outside of running Ukraine Digital Design, Jack is an 11th grade student at the Beaver Country Day School in Brookline, MA. In school he’s an avid cross country runner, serves as student council treasurer, and co-leads the schools Model-UN team. 
+</div>
 </div>
   <div class='child'><img src='https://ukrainedigital.org/images/JackBoteinPicture.jpg' class='jackpic'>
 </div>
