--- a/about.html
+++ b/about.html
@@ -209,7 +209,7 @@ button:hover {
 }
 .child {
   display: inline-block;
-  border: 0px solid #FFD500;;
+  border: 0px solid #FFD500;
   padding: 1rem 1rem;
   vertical-align: middle;
   max-width: 500px;
@@ -220,6 +220,10 @@ button:hover {
 .jackpic {
   width: 250px;
   border-radius: 10px;
+  border-style: solid;
+  border-width: 3px;
+  border-color: #FFD500;
+  margin-left: 5px;
 }
 
 .textdescription {
