--- a/about.html
+++ b/about.html
@@ -242,7 +242,7 @@ button:hover {
 
 <div class='parent'>
   <div class='child'><div class="textdescriptions">
-Russia’s invasion of Ukraine has forced over 3.6 million Ukrainians to flee their country, and another 10 million people are internally displaced. Without a clear end to the conflict, millions are left in dire straits, with economic instability exacerbated by a lack of employment opportunities in the short term. 
+Russia’s invasion of Ukraine has forced over 3.6 million Ukrainians to flee their country, and another 10 million people are internally displaced. Without a clear end to the conflict, millions are left in dire straits, with economic instability exacerbated by a lack of employment opportunities in the near-term. 
 <br><br>
 This past summer, Jack Botein founded his own website design business, producing graphics and websites for small organizations across the US. This successful business inspired Jack to launch Ukraine Digital Design in March 2022, aiming to connect Ukrainian digital designers living in tough circumstances with the same high-value American clients he targeted in his personal business. 
 <br><br>
