--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@ body {
 
   .underline {
   border-bottom: 3px solid #FFFFFF;
+  transition-duration: 1s;
+  }
+  
+  .underline:hover {
+    color: silver;
   }
   
     ::selection {
