--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ body {
 }
 
 .footerlinebreak {
-  height: 150px;
+  height: 0px;
 }
 
 .missionlinebreak {
@@ -136,56 +136,6 @@ button:hover {
   background-color: #FFD500;
 }
 
- .webdesignimg {
-min-width: 70px;
-min-height: 51.5px;
-width: 8.5vw;
-height: 6.5vw;
-background-size:cover;
-background-repeat: no-repeats;
-background-image: url("/images/webdesign.jpeg");
-}
-
- .graphicimg {
-min-width: 70px;
-min-height: 51.5px;
-width: 8.5vw;
-height: 6.5vw;
-background-size:cover;
-background-repeat: no-repeats;
-background-image: url("/images/graphicdesign.jpeg");
-}
-
- .codeimg {
-min-width: 70px;
-min-height: 51.5px;
-width: 8.5vw;
-height: 6.5vw;
-background-size:cover;
-background-repeat: no-repeats;
-background-image: url("/images/codefixes.jpg");
-}
-
- .uxuiimg {
-min-width: 70px;
-min-height: 51.5px;
-width: 8.5vw;
-height: 6.5vw;
-background-size:cover;
-background-repeat: no-repeats;
-background-image: url("/images/uxui.jpg");
-}
-
- .printdesignimg {
-min-width: 70px;
-min-height: 51.5px;
-width: 8.5vw;
-height: 6.5vw;
-background-size:cover;
-background-repeat: no-repeats;
-background-image: url("/images/printgraphics.jpg");
-}
-
 .footernavbar {
   font-size: 10px;
   padding-top: 22px;
@@ -205,6 +155,15 @@ background-image: url("/images/printgraphics.jpg");
 
 .footernavitem:hover {
   background-color: #FFD500;
+}
+
+.designserviceformblocker {
+  height: 120px;
+  width: 100vw;
+  background-color: #005BBB;
+  position: relative;
+  top: -120px;
+  z-index: 99;
 }
 
  </style>
@@ -236,19 +195,13 @@ A key thing to know: Ukrainian people are geniuses at tech. By hiring a designer
 
 <div class="missionlinebreak"></div>
 
-<div class="missionstatement" style="font-size: 22px;">
-What are you waiting for? Find an expert Ukrainian Digital Designer to help with:
-</div>
+<div class="missionstatement" style="font-size: 22px;margin-bottom: 10px;">
+Find the perfect Ukrainian Digital Designer for your organization</div>
 
-<a href="/categories/webdesign"><button style="margin-top: 15px;"><center><div class="webdesignimg"></div></center>Web Design</button></a>
 
-<a href="/categories/graphics"><button><center><div class="graphicimg"></div></center>Graphics</button></a>
-
-<a href="/categories/codefixes"><button><center><div class="codeimg"></div></center>Code Fixes</button></a>
-
-<a href="/categories/uxuiwork"><button><center><div class="uxuiimg"></div></center>UX/UI Work</button></a>
-
-<a href="/categories/printdesigns"><button><center><div class="printdesignimg"></div></center>Print Designs</button></a>
+<iframe src="https://www.cognitoforms.com/f/LypZd4A38023ZhSPVld8zQ/1" style="border:0;width:100%;" height="303"></iframe>
+<script src="https://www.cognitoforms.com/f/iframe.js"></script>
+<div class="designserviceformblocker"></div>
 
 <div class="footerlinebreak"></div>
 
