--- a/index.html
+++ b/index.html
@@ -198,10 +198,9 @@ A key thing to know: Ukrainian people are geniuses at tech. By hiring a designer
 <div class="missionstatement" style="font-size: 22px;margin-bottom: 10px;">
 Find the perfect Ukrainian Digital Designer for your organization</div>
 
-
-<iframe src="https://www.cognitoforms.com/f/LypZd4A38023ZhSPVld8zQ/1" style="border:0;width:100%;" height="303"></iframe>
+<center><iframe src="https://www.cognitoforms.com/f/LypZd4A38023ZhSPVld8zQ/1" style="border:0;width:100%;" height="303"></iframe>
 <script src="https://www.cognitoforms.com/f/iframe.js"></script>
-<div class="designserviceformblocker"></div>
+<div class="designserviceformblocker"></div></center>
 
 <div class="footerlinebreak"></div>
 
