--- a/designerregistration.html
+++ b/designerregistration.html
@@ -9,6 +9,16 @@
   <meta name="author" content="Jack Botein">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2CQLD448D5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2CQLD448D5');
+</script>
+  
   <style> 
   @import url('https://fonts.googleapis.com/css2?family=Sora&display=swap');
 
