--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="shortcut icon" href="/images/favicon.ico" />
   <meta charset="UTF-8">
   <meta name="description" content="A platform dedicated to connecting Ukrainian Digital Designers impacted by Russia's invasion with high-quality U.S. work opportunities.">
-  <meta name="keywords" content="Ukraine Digital Design, Ukraine digital design, Ukraine Digital Design, ukrainedigital.org, Ukraine, ukraine, helping ukraine, Russian Invasion, Jack Botein, Botein, Kyiv Web Design, web design, graphic design, logo design, graphics, HTML, CSS, JavaScript">
+  <meta name="keywords" content="Ukraine Digital Design, Ukraine digital design, ukraine digital design, hire for Ukraine, Hire for Ukraine, Hire For Ukraine, Ukraine Digital Design, ukrainedigital.org, Ukraine, ukraine, helping ukraine, Russian Invasion, Jack Botein, Botein, Kyiv Web Design, web design, graphic design, logo design, graphics, HTML, CSS, JavaScript">
   <meta name="author" content="Jack Botein">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
