--- a/newindex.html
+++ b/newindex.html
@@ -37,6 +37,7 @@ body {
  
  a {
     text-decoration: none;
+    color: black;
   }
   
  #everythingonwebsite {
@@ -68,7 +69,7 @@ body {
   position: absolute;
   bottom: 0;
   width: 100%;
-  color: #005BBB;
+  color: black;
   padding-top: 20px;
   padding-bottom: 20px;
   background-color: white;
@@ -109,7 +110,7 @@ body {
 }
 
 .missionlinebreak {
-  height: 30px;
+  height: 40px;
 }
 
 button {
@@ -132,6 +133,7 @@ button:hover {
 }
 
 .footernavbar {
+  color: black;
   font-size: 10px;
   padding-top: 22px;
   padding-bottom: 23px;
