--- a/newindex.html
+++ b/newindex.html
@@ -163,6 +163,13 @@ button:hover {
   z-index: 99;
 }
 
+.bigidea {
+  font-size: 35px;
+  padding-bottom: 50px;
+  padding-top: 20px;
+  text-shadow: 1.5px 1.5px 0 #bcbcbc, 3px 3px 0 #9c9c9c;
+}
+
  </style>
 </head>
 
@@ -173,6 +180,8 @@ button:hover {
    <div class="header"><a href="/"><img src="https://ukrainedigital.org/images/UkraineDigitalDesignLogo-1.png" class="logo"></a></div>
 
 <div class="headerlinebreak"></div>
+
+<div class="bigidea">Hire Ukrainian digital designers impacted by Russia's invasion</div>
 
 <div class="missionstatementcontainer">
 <div class="missionstatementtext">
