--- a/newindex.html
+++ b/newindex.html
@@ -40,6 +40,20 @@ body {
     color: black;
   }
   
+  body::-webkit-scrollbar {
+  width: 12px;
+}
+
+body::-webkit-scrollbar-track {
+  background: white;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #FFD500;
+  border-radius: 20px;
+  border: 3px solid #FFD500;
+}
+
  #everythingonwebsite {
   position: relative;
   min-height: 100vh;
@@ -167,7 +181,6 @@ button:hover {
   font-size: 35px;
   padding-bottom: 50px;
   padding-top: 20px;
-  text-shadow: 1.5px 1.5px 0 #bcbcbc, 3px 3px 0 #9c9c9c;
 }
 
  </style>
@@ -181,7 +194,7 @@ button:hover {
 
 <div class="headerlinebreak"></div>
 
-<div class="bigidea">Hire Ukrainian digital designers impacted by Russia's invasion</div>
+<div class="bigidea"><b>Hire Ukrainian digital designers impacted by Russia's invasion</b></div>
 
 <div class="missionstatementcontainer">
 <div class="missionstatementtext">
